--- a/index.html
+++ b/index.html
@@ -2,47 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Oluwatamilore's Portfolio</title>
+    <title>My Resume</title>
 </head>
 <body>
-    <h1>Tamilore's Portfolio</h1>
-    <h2>I am an Upcoming Web developer</h2>
-    <hr />
   
-<h1><P>IT'S MY BIRTHDAY LET'S CELEBRATE!!</P></h1>
-<h2><p>IT'S HAPPENING ON THE 13TH OF JUNE 2024</p></h2>
+   <h1><p style="text-align: center;"> OWOLABI OLUWATAMILORE SAMUEL</P></h1>
+   <address><P style="text-align: center;">Akoko Crescent, Kajola, Ojodu, Lagos State, Nigeria</P></address>
+   <p style="text-align: center;">Phone: +2340-8152085119</p>
+   <p style="text-align: center;">Email: oluwatamiloreowolabi97@gmail.com</p>
+   <img src="./dp.jpg" width="200" height="200"/>
+    <P><h2>PROFILE</h2></P>
+   <HR size="2px" color="black" />
+   <p>I am a highly skilled communicator and listener who is dedicated to achieving company 
+    goals through consistent and organized practices. I thrive under pressure and easily adapt 
+    to new situations and challenges to enhance the organizational brand. My interpersonal 
+    skills are unparalleled, and I possess a passionate, result-oriented personality.
+    </p>
+    <h2><p>WORK EXPERIENCE</p></h2>
+    <HR size="2px" color="black" />
+    <p><h3>SANNI &ASSOCIATES, Lagos, Nigeria</h3></p>
+    <P><i><font color="darkblue">Corper, March 2022- February 2023</font></i></P>
+    <ul>
+        <li>Quickly learned and applied new skills to daily tasks, increasing efficiency and productivity.</li>
+        <li>Collaborated with city authorities to develop new planning regulations for residential areas.</li>
+        <li> Supported staff members in producing approval reports for various businesses and financial institutions in preparation for future growth.</li>
+        <li> Carried out day-to-day duties accurately and efficiently.</li>
+        <li> Exhibited respect, friendliness, and willingness to help wherever needed</li>
+        <li> Updated and corrected building plans, blueprints, and drawings using AutoCAD.</li>
+        <li>Conducted inventory and mapped it out with the aid of AutoCAD.</li>
+        <li> Conducted surveys to understand traffic patterns, land use, and local issues, and informed planning decisions.</li>
+        <li> Designed layout of plans and helped in inventory drawing via AutoCAD software.</li>
+    </ul>
+ <p><h3>GIS PLUS TECHNOLOGIES, Akure, Nigeria</h3></p>
+ <p><i><font color="darkblue">I.T Intern, July 2018 - December 2018</font></i></p>
+ <ul>
+    <li> Reported back to the instructor to receive day-to-day tasks and responsibilities.</li>
+    <li> Communicated effectively with faculty and staff and welcomed critiques and suggestions for areas of improvement.</li>
+    <li> Utilized Computer Aided Drafting (AutoCAD) for collecting, editing and analyzing data, and finally digitizing.</li>
+    <li>  Worked with staff members to provide approval reports for various businesses and financial institutions in preparation for future growth.</li>
+    <li>  Provided clerical support by handling a range of routine and special requirements.</li>
+    <li> Analyzed problems, identified solutions and made decisions.</li>
+    <li> Prepared regulations, urban design guidelines, and other related planning and urban design standards for master planning and urban Development projects.</li>
+    <li>  Created designs using ArcGIS to show the spatial geographical areas on the earth's surface.</li>
+</ul>
+<h2><p>EDUCATION</p></h2>
+<HR size="2px" color="black"/>
+<p><H4>FEDERAL UNIVERSITY OF TECHNOLOGY, Akure</H4></p>
+<p>B.Tech. Urban and Regional Planning (Oct.2021)</p>
 
-<h3><a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/birthday-invite.html">Birthday Invite Project</a></h3>
-<img src="./assets/images/BIRTHDAY PREVIEW.png" height="400" width="400" alt="birthday Invite preview"/>
+<p><h2>ADDITIONAL SKILLS</h2></p>
+<hr size="2px" color="black"/>
+<ul>
+    <li>Advanced knowledge of software applications including AutoCAD, ArcGIS</li>
+    <li>Microsoft Office Suite, Adobe Photoshop, Adobe Illustrator, Adobe After Effect,Adobe Premiere and Figma</li>
+    <li> Strong team collaboration skills. Work closely with team members to achieve goals.</li>
+    <li>Conflict resolution.</li>
+    <li> Quick learner with an ability to adapt quickly to a new environment.</li>
+    <li> Good listening skills.</li>
+    <li>Good interpersonal and communication skills.</li>
+    <li>Adaptability and flexibility.</li>
+</ul>
 
-<h3>IF YOU SEND ME THE LOCATION I'LL BE RIGHT THERE!</h3>
-<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,
-289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">be right there!</a>
-  map link</a>
-
-  <h1>My Favourite Movies of 2023</h1>
-  <h2>Top Three Movies</h2>
-
-  <hr />
-  <h3><a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/movie-ranking.html">Movie-ranking Project</a></h3>
-  <img src="./assets/images/MOVIES PREVIEW.png" height="400" width="400" alt="movie-ranking review"/>
-
-  <hr />
-  <a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/contact.html">Contact Me</a>
-  <a href="http://127.0.0.1:3000/4.3 HTML Porfolio Project/public/about.html">About Me</a>
+<p><h2>CERTIFICATION</h2></p>
+<hr size="2px" color="black"/>
+<P>Certificate of Completion of N.Y.S.C</P>
+<P>UK Health Safety Environment (HSE1,2,3) training certification</P>
+<p>The Fundamentals of Digital Marketing</p>
+<p>Daystar Skills Acquisition Program (Video Editing)</p>
+<p>Certificate of Achievement in ArcGIS Spatial Analyst</p>
+<p>Figma UI UX Design Essentials</p>
+<HR size="1PX" color="darkblue"/>
+<H5><A href="http://127.0.0.1:3000/cap project/contact.html">CONTACT ME </A></H5>
+<footer><small> Copyright © 2023 Oluwatamilore Owolabi. All Rights Reserved.</small></footer>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
